--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
     <header class="dashboard-header">
         <div class="brand-title">TBC Leveling & Attunement Guide (60-70)</div>
-        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <span class="guild-tag">Relax</span></div>
+        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <span class="guild-tag"><Relax></span></div>
         
         <div class="mission-brief">
             <p><strong>Mission Objective:</strong> Streamline the Level 60-70 process for our guild. This dashboard consolidates optimal dungeon routes, reputation caps, and the critical Karazhan attunement chain into an easy to follow format. This is meant to be thrown up on a second monitor to aide the leveling process.</p>
