--- a/index.html
+++ b/index.html
@@ -538,12 +538,12 @@
                                         <span class="loot-meta">Plate Boots (Tank)</span>
                                     </div>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-rare">Mantle of the Intrepid</span>
+                                        <span class="loot-name loot-rare">Mantle of the Dusk-Dweller</span>
                                         <span class="loot-meta">Agility Shoulders</span>
                                     </div>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-rare">Light-Touched Stole</span>
-                                        <span class="loot-meta">Healer Neck</span>
+                                        <span class="loot-name loot-rare">Auslese's Light Channeler</span>
+                                        <span class="loot-meta">Healer Trinket</span>
                                     </div>
                                 </div>
                                 <div class="info-col">
@@ -619,8 +619,8 @@
                                 <div class="info-col">
                                     <h4>Dungeon Drops (Normal)</h4>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-rare">Midnight Legguards</span>
-                                        <span class="loot-meta">Leather DPS Legs</span>
+                                        <span class="loot-name loot-rare">Coilfang Hammer of Renewal</span>
+                                        <span class="loot-meta">Healer Mace</span>
                                     </div>
                                     <div class="loot-item">
                                         <span class="loot-name loot-rare">Spellfire Longsword</span>
@@ -634,8 +634,8 @@
                                         <span class="loot-meta">Feral Tank Staff (Exalted) - BiS Pre-Raid</span>
                                     </div>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-epic">Windcaller's Wrath</span>
-                                        <span class="loot-meta">Caster Mainhand</span>
+                                        <span class="loot-name loot-epic">Glyph of Ferocity</span>
+                                        <span class="loot-meta">BIS Phys Head Enchant</span>
                                     </div>
                                     <div class="loot-item">
                                         <span class="loot-name loot-rare">Watcher's Cowl</span>
@@ -770,7 +770,7 @@
                                     </div>
                                     <div class="loot-item">
                                         <span class="loot-name loot-rare">Auchenai Monk's Tunic</span>
-                                        <span class="loot-meta">Druid/Rogue Chest</span>
+                                        <span class="loot-meta">Druid/Rogue Chest (Crypts Quest)</span>
                                     </div>
                                 </div>
                                 <div class="info-col">
