--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
                                 <div class="info-col">
                                     <h4>Shattered Halls Loot (Normal)</h4>
                                     <div class="loot-item"><span class="loot-name loot-rare">Runesong Dagger</span><span class="loot-meta">Caster Dagger</span></div>
-                                    <div class="loot-item"><span class="loot-name loot-rare">Figurine of the Colossus</span><span class="loot-meta">Prot Paly Trinket/span></div>
+                                    <div class="loot-item"><span class="loot-name loot-rare">Figurine of the Colossus</span><span class="loot-meta">Prot Paly Trinket</span></div>
                                 </div>
                                 <div class="info-col">
                                     <h4>Shadow Labyrinth Loot (Normal)</h4>
