--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                     </div>
                 </div>
                 <div class="bar-group">
-                    <div class="bar-label">Shadow Labyrinth</div>
+                    <div class="bar-label">Shadow Labs</div>
                     <div class="bar-track">
                         <div class="bar-fill medium" style="width: 56%;">2.8 Bars</div>
                     </div>
