--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                                         <span class="loot-meta">Healer Head Enchant (Revered)</span>
                                     </div>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-epic">Blade of the Unrequited</span>
+                                        <span class="loot-name loot-epic">Blade of the Archmage</span>
                                         <span class="loot-meta">1H Sword (Exalted)</span>
                                     </div>
                                 </div>
