--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <strong>&lt;Relax&gt;</strong></div>
         
         <div class="mission-brief">
-            <p><strong>Mission Objective:</strong> Streamline the Level 60-70 process for our guild. This dashboard consolidates optimal dungeon routes, reputation caps, and the critical Karazhan attunement chain into an easy to follow format.</p>
+            <p><strong>Objective:</strong> Streamline the Level 60-70 process for our guild. This dashboard consolidates optimal dungeon routes, reputation caps, and the critical Karazhan attunement chain into an easy to follow format.</p>
             <p style="margin-top:10px; font-size:0.85rem; opacity:0.8;">
                 Compiled using strategy from the <a href="https://www.youtube.com/watch?v=EYq4B4X7yrk" target="_blank">GuideMMO Strategy Video</a> and various notes I've collected.
             </p>
