--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                     <div class="content-padding">
                         <div class="tldr-box">
                             <div class="tldr-title">TL;DR</div>
-                            <p class="tldr-text">Start with Ramparts for the quest item, then grind Blood Furnace until Honored (5999/6000). Save all open-world quests for Level 70 gold.</p>
+                            <p class="tldr-text">Start with Ramparts for the quest item, then grind Blood Furnace until Honored (5999/6000). Save all open-world quests for Level 70 gold. Saving all the open-world quests can net you around 6k gold if you complete all zones at 70.</p>
                         </div>
 
                         <div class="tabs">
