--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                 <div class="card-header" onclick="toggleCard(this)">
                     <div class="header-content">
                         <h3 style="color: var(--legion-ember);">Ring of Blood</h3>
-                        <span>Nagrand Arena (Mandatory)</span>
+                        <span>Nagrand Arena (Highly Recommended)</span>
                     </div>
                     <div class="lvl-badge">Lvl 65</div>
                 </div>
@@ -726,7 +726,7 @@
                     <div class="content-padding">
                         <div class="tldr-box">
                             <div class="tldr-title">TL;DR</div>
-                            <p class="tldr-text">These dungeons are less about XP and more about unlocking the future. You MUST clear Old Hillsbrad to unlock Black Morass. You SHOULD clear Sethekk to get the Shadow Lab key.</p>
+                            <p class="tldr-text">These dungeons are less about XP and more about unlocking the future. You MUST clear Old Hillsbrad to unlock Black Morass. You SHOULD clear Sethekk to get the Shadow Lab key. After completeting Old Hillsbrad once swap to Sethekk Halls until 68.</p>
                         </div>
 
                         <div class="tabs">
