--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                 <div class="card-header" onclick="toggleCard(this)">
                     <div class="header-content">
                         <h3 style="color: #A78BFA;">Karazhan Master's Key</h3>
-                        <span style="color: #8B5CF6;">Comprehensive Attunement Checklist</span>
+                        <span style="color: #8B5CF6;">Comprehensive Attunement Checklist <strong>(Mandatory)</strong></span>
                     </div>
                     <div class="lvl-badge">68+</div>
                 </div>
