--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="mission-brief">
             <p><strong>Objective:</strong> Streamline the Level 60-70 process for our guild. This guide consolidates optimal dungeon routes, reputation caps, and the Kara attunement chain into an easy to follow guide.</p>
             <p style="margin-top:10px; font-size:0.85rem; opacity:0.8;">
-                Compiled using strategy from the <a href="https://www.youtube.com/watch?v=EYq4B4X7yrk" target="_blank">GuideMMO Strategy Video</a> and various notes I've collected.
+                Compiled using info from the <a href="https://www.youtube.com/watch?v=EYq4B4X7yrk" target="_blank">GuideMMO Strategy Video</a> and various notes I've collected.
             </p>
         </div>
     </header>
