--- a/index.html
+++ b/index.html
@@ -872,9 +872,9 @@
                         <div id="dest-shat" class="tab-panel active">
                             <div class="info-grid">
                                 <div class="info-col">
-                                    <h4 style="color:var(--fel-deep)">XP King (Spellcleave)</h4>
+                                    <h4 style="color:var(--fel-deep)">Honor Hold & Fat Pulls</h4>
                                     <ul class="data-list">
-                                        <li><strong>The Meta:</strong> Shattered Halls has the highest mob count of any 5-man. If you have a Protection Paladin and a Mage/Warlock, you can pull massive groups and AOE them down. This yields 5+ bars of XP per clear.</li>
+                                        <li><strong>The Meta:</strong> Shattered Halls has the highest mob count of any 5-man. If you have a Protection Paladin and a Mage/Warlock, you can pull massive groups and AOE them down. This yields 5+ bars of XP per clear. Avoid if you are lacking solid AOE.</li>
                                         <li><strong>The Gate:</strong> Requires the <em>Shattered Halls Key</em> (from the Smith Gorlunk quest chain in Shadowmoon Valley) or a Rogue with 350 Lockpicking to open the front gate.</li>
                                         <li><strong>Reputation:</strong> Grants Honor Hold / Thrallmar rep all the way to Exalted.</li>
                                     </ul>
