--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
             </div>
 
         </div> </div>
-
+        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <strong>&lt;Relax&gt;</strong> on <i>Dreamscythe</i> for TBC Anniversary</div>
     <script>
         // Tab Switcher
         function switchTab(btn, targetId) {
