--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                                     <h4>The Approach</h4>
                                     <ul class="data-list">
                                         <li><strong>Start in Ramparts:</strong> It is the introductory dungeon. Mobs are weaker, but XP density is lower. Your goal here is specifically to loot the <em>Ominous Letter</em> from the final boss.</li>
-                                        <li><strong>Switch to Blood Furnace (Lvl 61):</strong> BF has higher mob density and better XP per hour. Stay here until Level 62.</li>
+                                        <li><strong>Switch to Blood Furnace:</strong> BF has higher mob density and better XP per hour. Stay here until Level 62 or Honored.</li>
                                         <li><strong>Do NOT Quest:</strong> Saving Hellfire Peninsula quests for max level converts the XP reward into gold, netting you hundreds of extra gold for your flying mount.</li>
                                     </ul>
                                 </div>
