--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                     <div class="content-padding">
                         <div class="tldr-box">
                             <div class="tldr-title">TL;DR</div>
-                            <p class="tldr-text">These dungeons are less about XP and more about unlocking the future. You MUST clear Old Hillsbrad to unlock Black Morass. You SHOULD clear Sethekk to get the Shadow Lab key. After completeting Old Hillsbrad once swap to Sethekk Halls until 68.</p>
+                            <p class="tldr-text">These dungeons are less about XP and more about unlocking the future. You MUST clear Old Hillsbrad to unlock Black Morass. You SHOULD clear Sethekk to get the Shadow Lab key. After completeting Old Hillsbrad once swap to Sethekk Halls until 68. You can also add in a quest run of Crypts, there's an excellenct chest for Druids/Rogues and Casters.</p>
                         </div>
 
                         <div class="tabs">
