--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
     <header class="dashboard-header">
         <div class="brand-title">TBC Leveling & Attunement Guide (60-70)</div>
-        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <strong>&lt;Relax&gt;</strong> on <i>Dreamscythe</i> for TBC Anniversary</div>
+        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <strong>&lt;Relax&gt;</strong> on <i>Dreamscythe</i> | TBC Anniversary</div>
         
         <div class="mission-brief">
             <p><strong>Objective:</strong> Streamline the Level 60-70 process for our guild. This guide consolidates optimal dungeon routes, reputation caps, and the Kara attunement chain into an easy to follow guide.</p>
@@ -943,7 +943,7 @@
             </div>
 
         </div> </div>
-        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <strong>&lt;Relax&gt;</strong> on <i>Dreamscythe</i> for TBC Anniversary</div>
+        <div class="brand-subtitle">Authored by <strong>Thurlan</strong> for <strong>&lt;Relax&gt;</strong> on <i>Dreamscythe</i> | TBC Anniversary</div>
     <script>
         // Tab Switcher
         function switchTab(btn, targetId) {
