--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                     <h4><svg class="icon" viewBox="0 0 24 24"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>The Approach</h4>
                                     <ul class="data-list">
                                         <li><strong>Start in Ramparts:</strong> It is the introductory dungeon. Mobs are weaker, but XP density is lower. Your goal here is specifically to loot the <em>Ominous Letter</em> from the final boss.</li>
-                                        <li><strong>Switch to Blood Furnace:</strong> BF has higher mob density and better XP per hour. Stay here until Level 62 or Honored.</li>
+                                        <li><strong>Switch to Blood Furnace:</strong> BF has higher mob density and better XP per hour. Stay here until Level 62 or Honored (5999/6000).</li>
                                         <li><strong>Do NOT Quest:</strong> Saving Hellfire Peninsula quests for max level converts the XP reward into gold, netting you hundreds of extra gold for your flying mount.</li>
                                     </ul>
                                 </div>
@@ -1007,7 +1007,7 @@
                     </div>
                 </div>
             </div>
-             <p style="font-size: 0.8rem; margin-top: 15px; opacity: 0.7; text-align: center;">*Rough estimate. Rested experience, group average level, and how fully you clear will all effect this. Shattered Halls assumes AOE group.</p>
+             <p style="font-size: 0.8rem; margin-top: 15px; opacity: 0.7; text-align: center;">*Rough estimate. Rested experience, group average level, and how fully you clear will all effect this.</p>
         </div>
         </div> </div>
 
