Update loot items in index.html

--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Dungeon Drops (Normal)</h4>
                                     <div class="loot-item">
-                                        <span class="loot-name loot-rare">Coilfang Hammer of Renewal</span>
-                                        <span class="loot-meta">Healer Mace</span>
+                                        <span class="loot-name loot-rare">Bogstrok Scale Cloak</span>
+                                        <span class="loot-meta">Tank Cloak</span>
                                     </div>
                                     <div class="loot-item">
                                         <span class="loot-name loot-rare">Spellfire Longsword</span>
@@ -605,7 +605,7 @@
                                     <h4><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="8" r="7"/><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"/></svg>Reputation Rewards (Cenarion)</h4>
                                     <div class="loot-item">
                                         <span class="loot-name loot-epic">Earthwarden</span>
-                                        <span class="loot-meta">Feral Tank Staff (Exalted)</span>
+                                        <span class="loot-meta">Feral Tank Mace (Exalted)</span>
                                     </div>
                                     <div class="loot-item">
                                         <span class="loot-name loot-epic">Glyph of Ferocity</span>
@@ -918,7 +918,7 @@
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Shadow Labyrinth Loot</h4>
                                     <div class="loot-item"><span class="loot-name loot-rare">Sonic Spear</span><span class="loot-meta">Hunter/Feral Stat Stick</span></div>
-                                    <div class="loot-item"><span class="loot-name loot-rare">Greatsword of Forlorn Visions</span><span class="loot-meta">Ret/Arms 2H</span></div>
+                                    <div class="loot-item"><span class="loot-name loot-rare">Idol of the Emerald Dream</span><span class="loot-meta">BIS R-Druid Idol/span></div>
                                 </div>
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Black Morass Loot</h4>
