Update description for Arcane Bomb in index.html

--- a/index.html
+++ b/index.html
@@ -497,8 +497,9 @@
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="m4.93 4.93 4.24 4.24"/><path d="m14.83 14.83 4.24 4.24"/><path d="m14.83 9.17 4.24-4.24"/><path d="m4.93 19.07 4.24-4.24"/></svg>Engineering Tools</h4>
                                     <ul class="data-list">
-                                        <li><strong>Arcane Bomb:</strong> AoE Silence/Interrupt. Extremely high value in TBC dungeons due to the high density of caster mobs (Blood Furnace, Shattered Halls).</li>
+                                        <li><strong>Arcane Bomb:</strong> AoE Silence/Interrupt. Extremely high value in TBC heroics & raids due to the high density of caster mobs (Blood Furnace, Shattered Halls).</li>
                                         <li><strong>Requirement:</strong> Engineering Schematic.</li>
+                                        <li><strong>Luxury Item:</strong> Can be pricy so stockpile for raids or use them sparingly in heroics.</li>
                                     </ul>
                                 </div>
                             </div>
