Add reputation goal information to index.html

--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
                                         <li><strong>Faction:</strong> Honor Hold (Alliance) / Thrallmar (Horde).</li>
                                         <li><strong>The Cap:</strong> Normal difficulty dungeons only grant reputation up to 5999/6000 Honored. Once you hit this, you get 0 rep per kill.</li>
                                         <li><strong>Optimization:</strong> Stop running these dungeons exactly when you hit Honored. Further runs waste reputation potential that you could get later via Heroics or Quests.</li>
+                                        <li><strong>Rep Goal:</strong> Reach Honored (5999/6000) so you are Revered and ready for heroics @ 70.</li>
                                     </ul>
                                 </div>
                             </div>
