Fix typo in Luxury Item description

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                     <ul class="data-list">
                                         <li><strong>Arcane Bomb:</strong> AoE Silence/Interrupt. Extremely high value in TBC heroics & raids due to the high density of caster mobs (Blood Furnace, Shattered Halls).</li>
                                         <li><strong>Requirement:</strong> Engineering Schematic.</li>
-                                        <li><strong>Luxury Item:</strong> Can be pricy so stockpile for raids or use them sparingly in heroics.</li>
+                                        <li><strong>Luxury Item:</strong> Can be pricey so stockpile for raids or use them sparingly in heroics.</li>
                                     </ul>
                                 </div>
                             </div>
