--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>Reputation Cap Mechanics</h4>
                                     <ul class="data-list">
-                                        <li><strong>Faction:</strong> Honor Hold (Alliance) / Thrallmar (Horde).</li>
+                                        <li><strong>Faction:</strong> Honor Hold (Alliance).</li>
                                         <li><strong>The Cap:</strong> Normal difficulty dungeons only grant reputation up to 5999/6000 Honored. Once you hit this, you get 0 rep per kill.</li>
                                         <li><strong>Optimization:</strong> Stop running these dungeons exactly when you hit Honored. Further runs waste reputation potential that you could get later via Heroics or Quests.</li>
                                         <li><strong>Rep Goal:</strong> Reach Honored (5999/6000) so you are Revered and ready for heroics @ 70.</li>
