Update dungeon card description for Auchindoun

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                 <div class="card-header" onclick="toggleCard(this)">
                     <div class="header-content">
                         <h3><svg class="icon" style="color: #d8b4fe;" viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>Mana Tombs</h3>
-                        <span>Auchindoun: Consortium Run</span>
+                        <span>Auchindoun: Consortium Run (Optional)</span>
                     </div>
                     <div class="lvl-badge">65 - 66</div>
                 </div>
@@ -774,6 +774,7 @@
                                 <li><strong>One and Done:</strong> Run once for the 3 quests, then leave.</li>
                                 <li>XP/Hour is lower than Slave Pens (approx 2.2 bars/run).</li>
                                 <li>Reputation: The Consortium (Rewards are lackluster).</li>
+                                <li>Not optimal for experience but good to add in the mix to change it up after so many Slave Pens runs.</li>
                             </ul>
                         </div>
 
