Refactor mission objective paragraph structure
Split the mission objective description into two paragraphs for better readability.

--- a/index.html
+++ b/index.html
@@ -441,7 +441,8 @@
         
         <div class="mission-brief">
             <h4><svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg> Mission Objective</h4>
-            <p>Streamline the Level 60-70 process for our guild. This guide consolidates optimal dungeon routes, reputation caps, and the Kara attunement chain into an easy to follow guide. Pre-stacking quests is a great bonus but not assumed in this guide.</p>
+            <p>Streamline the Level 60-70 process for our guild. This guide consolidates optimal dungeon routes, reputation caps, and the Kara attunement chain into an easy to follow guide.</p> 
+                <p>Pre-stacking quests is a great bonus but not assumed in this guide.</p>
             <p style="margin-top:10px; font-size:0.85rem; opacity:0.8;">
                 Compiled using info from the <a href="https://www.youtube.com/watch?v=EYq4B4X7yrk" target="_blank">GuideMMO Strategy Video</a> and various notes I've collected.
             </p>
