--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                         <div id="s4-gear" class="tab-panel">
                             <div class="info-grid">
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Sehekk HallsLoot</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>Sethekk Halls Loot</h4>
                                     <div class="loot-item">
                                         <span class="loot-name loot-rare">Ravenclaw Band</span>
                                         <span class="loot-meta">Phys DPS Ring</span>
