--- a/index.html
+++ b/index.html
@@ -772,10 +772,10 @@
                             <div class="tldr-title"><svg class="icon" viewBox="0 0 24 24"><path d="M12 2a7 7 0 0 1 7 7c0 2.38-1.19 4.47-3 5.74V17a2 2 0 0 1-2 2H10a2 2 0 0 1-2-2v-2.26C6.19 13.47 5 11.38 5 9a7 7 0 0 1 7-7z"/><path d="M9 21h6"/></svg>TL;DR</div>
                             <ul>
                                 <li>Located in Terokkar Forest (Auchindoun).</li>
-                                <li><strong>One and Done:</strong> Run once for the 3 quests, then leave.</li>
                                 <li>XP/Hour is lower than Slave Pens (approx 2.2 bars/run).</li>
-                                <li>Reputation: The Consortium (Rewards are lackluster).</li>
-                                <li>Not optimal for experience but good to add in the mix to change it up after so many Slave Pens runs.</li>
+                                <li>Reputation: The Consortium (Phys Ring Enchant)</li>
+                                <li>At ~9 runs to Honored and ~2 bars per run, this fits in well 65-66.</li>
+                                <li>If speed is top priority, SP will probably give better XP/Hour.</li>
                             </ul>
                         </div>
 
@@ -793,7 +793,7 @@
                                         <li><strong>Slow Clear:</strong> It takes a while to clear and only rewards ~2.2 bars of XP.</li>
                                         <li><strong>The Play:</strong> Do the dungeon <strong>once</strong> to complete the quests picked up outside.</li>
                                         <li><strong>Escort:</strong> Be ready for the escort quest inside the dungeon (Prince Shaffar's room area).</li>
-                                        <li><strong>Back to the Pens:</strong> After your one clear, it is often better to return to Slave Pens for raw XP efficiency until level 66.</li>
+
                                     </ul>
                                 </div>
                             </div>
@@ -804,9 +804,8 @@
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>The Consortium</h4>
                                     <ul class="data-list">
-                                        <li><strong>Reputation Trap:</strong> You can only get rep to Honored in Normal. No other dungeon gives this rep later.</li>
-                                        <li><strong>Underwhelming Rewards:</strong> The reputation rewards (Gun, Cloth Helm) are generally considered poor itemization for the effort.</li>
-                                        <li><strong>Heroic Key:</strong> You will eventually need Revered for the Heroic key, but that requires open world questing later, not dungeon grinding now.</li>
+                                        <li><strong>Reputation:</strong> You can only get rep to Honored in Normal. No other dungeon gives this rep later.</li>
+                                     
                                     </ul>
                                 </div>
                             </div>
@@ -815,8 +814,8 @@
                         <div id="mt-tasks" class="tab-panel">
                             <label class="task-row"><input type="checkbox" id="mt1"><span class="task-text">Pick up Quests (Outside Entrance)</span></label>
                             <label class="task-row"><input type="checkbox" id="mt2"><span class="task-text">Complete Escort Quest (Inside)</span></label>
-                            <label class="task-row"><input type="checkbox" id="mt3"><span class="task-text">Kill Prince Shaffar (One Run)</span></label>
-                            <label class="task-row"><input type="checkbox" id="mt4"><span class="task-text">Return to Slave Pens / Open World</span></label>
+                            <label class="task-row"><input type="checkbox" id="mt3"><span class="task-text">Kill Prince Shaffar </span></label>
+                            <label class="task-row"><input type="checkbox" id="mt4"><span class="task-text">Reach Honored with The Consortium</span></label>
                         </div>
                     </div>
                 </div>
