--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                                     <h4><svg class="icon" viewBox="0 0 24 24"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>Inefficiency Warning</h4>
                                     <ul class="data-list">
                                         <li><strong>Slow Clear:</strong> It takes a while to clear and only rewards ~2.2 bars of XP.</li>
-                                        <li><stron>Interrupt: There are many annoying spells to kick in here.
+                                        <li><strong>Interrupt:</strong> There are many annoying spells to kick in here.</li>
                                         <li><strong>Escort:</strong> Be ready for the escort quest inside the dungeon (Prince Shaffar's room area).</li>
 
                                     </ul>
