--- a/index.html
+++ b/index.html
@@ -772,7 +772,6 @@
                             <div class="tldr-title"><svg class="icon" viewBox="0 0 24 24"><path d="M12 2a7 7 0 0 1 7 7c0 2.38-1.19 4.47-3 5.74V17a2 2 0 0 1-2 2H10a2 2 0 0 1-2-2v-2.26C6.19 13.47 5 11.38 5 9a7 7 0 0 1 7-7z"/><path d="M9 21h6"/></svg>TL;DR</div>
                             <ul>
                                 <li>Located in Terokkar Forest (Auchindoun).</li>
-                                <li>XP/Hour is lower than Slave Pens (approx 2.2 bars/run).</li>
                                 <li>Reputation: The Consortium (Phys Ring Enchant)</li>
                                 <li>At ~9 runs to Honored and ~2 bars per run, this fits in well 65-66.</li>
                                 <li>If speed is top priority, SP will probably give better XP/Hour.</li>
@@ -790,7 +789,6 @@
                                 <div class="info-col">
                                     <h4><svg class="icon" viewBox="0 0 24 24"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>Inefficiency Warning</h4>
                                     <ul class="data-list">
-                                        <li><strong>Slow Clear:</strong> It takes a while to clear and only rewards ~2.2 bars of XP.</li>
                                         <li><strong>Interrupt:</strong> There are many annoying spells to kick in here.</li>
                                         <li><strong>Escort:</strong> Be ready for the escort quest inside the dungeon (Prince Shaffar's room area).</li>
 
@@ -1062,42 +1060,42 @@
                 </div>
             </div>
 <div class="chart-card">
-            <div class="section-title"><svg class="icon" viewBox="0 0 24 24"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg> XP Efficiency (Bars per Clear)</div>
+            <div class="section-title"><svg class="icon" viewBox="0 0 24 24"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg> XP Efficiency (Approximate Bars per Clear)</div>
             <div class="xp-chart">
                 <div class="bar-group">
                     <div class="bar-label">Shattered Halls</div>
                     <div class="bar-track">
-                        <div class="bar-fill" style="width: 100%;">5.0+ (Spellcleave)</div>
+                        <div class="bar-fill" style="width: 100%;">~5.0+ (Spellcleave)</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Slave Pens</div>
                     <div class="bar-track">
-                        <div class="bar-fill" style="width: 80%;">4.0 Bars</div>
+                        <div class="bar-fill" style="width: 80%;">~4.0 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Blood Furnace</div>
                     <div class="bar-track">
-                        <div class="bar-fill" style="width: 70%;">3.5 Bars</div>
+                        <div class="bar-fill" style="width: 70%;">~3.5 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Steamvault</div>
                     <div class="bar-track">
-                        <div class="bar-fill medium" style="width: 60%;">3.0 Bars</div>
+                        <div class="bar-fill medium" style="width: 60%;">~3.0 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Shadow Labs</div>
                     <div class="bar-track">
-                        <div class="bar-fill medium" style="width: 56%;">2.8 Bars</div>
+                        <div class="bar-fill medium" style="width: 56%;">~2.8 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Ramparts</div>
                     <div class="bar-track">
-                        <div class="bar-fill medium" style="width: 50%;">2.5 Bars</div>
+                        <div class="bar-fill medium" style="width: 50%;">~2.5 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
@@ -1109,31 +1107,31 @@
                  <div class="bar-group">
                     <div class="bar-label">Sethekk Halls</div>
                     <div class="bar-track">
-                        <div class="bar-fill medium" style="width: 48%;">2.4 Bars</div>
+                        <div class="bar-fill medium" style="width: 48%;">~2.4 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Mana Tombs</div>
                     <div class="bar-track">
-                        <div class="bar-fill low" style="width: 44%;">2.2 Bars</div>
+                        <div class="bar-fill low" style="width: 44%;">~2.2 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Old Hillsbrad</div>
                     <div class="bar-track">
-                        <div class="bar-fill low" style="width: 40%;">2.0 Bars</div>
+                        <div class="bar-fill low" style="width: 40%;">~2.0 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Auchenai Crypts</div>
                     <div class="bar-track">
-                        <div class="bar-fill low" style="width: 30%;">1.5 Bars</div>
+                        <div class="bar-fill low" style="width: 30%;">~1.5 Bars</div>
                     </div>
                 </div>
                 <div class="bar-group">
                     <div class="bar-label">Black Morass</div>
                     <div class="bar-track">
-                        <div class="bar-fill low" style="width: 20%;">1.0 Bars</div>
+                        <div class="bar-fill low" style="width: 20%;">~1.0 Bars</div>
                     </div>
                 </div>
             </div>
