--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -762,7 +762,7 @@
                 <div class="card-header" onclick="toggleCard(this)">
                     <div class="header-content">
                         <h3><svg class="icon" style="color: #d8b4fe;" viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>Mana Tombs</h3>
-                        <span>Auchindoun: Consortium Run (Optional)</span>
+                        <span>Auchindoun: Consortium Runs (Optional)</span>
                     </div>
                     <div class="lvl-badge">65 - 66</div>
                 </div>
