--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@ f<!DOCTYPE html>
                     </div>
                 </div>
             </div>
-             <p style="font-size: 0.8rem; margin-top: 15px; opacity: 0.7; text-align: center;">*Rough estimate. Rested experience, group average level, and how fully you clear will all effect this.</p>
+             <p style="font-size: 0.8rem; margin-top: 15px; opacity: 0.7; text-align: center;">*Rough estimate. Rested experience, group average level, and how fully you clear will impact experience gains.</p>
         </div>
         </div> </div>
 
