--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ f<!DOCTYPE html>
                         <div id="mt-strat" class="tab-panel active">
                             <div class="info-grid">
                                 <div class="info-col">
-                                    <h4><svg class="icon" viewBox="0 0 24 24"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>Inefficiency Warning</h4>
+                                    <h4><svg class="icon" viewBox="0 0 24 24"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/></svg>GET TOMBED</h4>
                                     <ul class="data-list">
                                         <li><strong>Interrupt:</strong> There are many annoying spells to kick in here.</li>
                                         <li><strong>Escort:</strong> Be ready for the escort quest inside the dungeon (Prince Shaffar's room area).</li>
