--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ f<!DOCTYPE html>
                 <div class="bar-group">
                     <div class="bar-label">Underbog</div>
                     <div class="bar-track">
-                        <div class="bar-fill medium" style="width: 50%;">2.5 Bars</div>
+                        <div class="bar-fill medium" style="width: 50%;">~2.5 Bars</div>
                     </div>
                 </div>
                  <div class="bar-group">
